# bddd

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build.sh  code-style.md  run.sh  test.c
include/: ast.h  exceptions.h
include/asm/: asm-builder.h  asm-fixed.h  asm-optimization.h  asm-register.h  asm.h
include/ast/: ast.h  symbol-table.h  type.h
include/ir/: builder.h  ir-name-allocator.h  ir-pass-manager.h  ir.h  loop.h  type.h
include/ir/pass/: mem2reg.h
include/parser/: driver.h
pre-build/: lexer.cpp  lexer.hh  location.hh  parser.cpp  parser.hh
src/: ast.cpp  main.cpp
src/asm/: asm-builder.cpp  asm-codegen.cpp  asm-export.cpp  asm-fixed.cpp  asm-liveness.cpp  asm-optimization.cpp  asm-register.cpp  asm.cpp  print.cpp
src/ast/: ast.cpp  codegen.cpp  debug.cpp  symbol-table.cpp  type-check.cpp
src/ir/: builder.cpp  export.cpp  ir-name-allocator.cpp  ir-pass-manager.cpp  ir.cpp
src/ir/pass/: basic.cpp  dce.cpp  dead-code-elimination.cpp  dom.cpp  function-inlining.cpp  gcm.cpp  global-const-array.cpp  global-const.cpp  gvn.cpp  instr-combine.cpp  lcssa.cpp  load.cpp  loop-analysis.cpp  loop-detection.cpp  loop-simplify.cpp  loop-unrolling.cpp  loop.cpp  mem2reg.cpp  rpo.cpp  side-effect.cpp  strength-reduction.cpp  tail-recursion.cpp
src/parser/: driver.cpp  lexer.l  parser.y
